adjust font size on homepage

--- a/index.htm
+++ b/index.htm
@@ -55,7 +55,7 @@
        <col span="1" style="width:90vw;">
     </colgroup>
 
-    <tbody style="font-size:1.3vw">
+    <tbody> <!--style="font-size:1.3vw">-->
       <tr valign="top">
         <td><strong>Duration:</strong></td>
         <td>October 2021 - September 2023</td>
@@ -115,6 +115,6 @@
   Page created and maintained by Philipp Sauerteig, last updated: September 2021.
 </footer>
 
-</main>
+<!--</main>-->
 </body>
 </html>
