--- a/publications.htm
+++ b/publications.htm
@@ -89,6 +89,7 @@
         </tbody>
       </table>
   </div>
+</div>
 
 <footer>
  Page created and maintained by Philipp Sauerteig, last updated: September 2021.
