--- a/partners.htm
+++ b/partners.htm
@@ -120,6 +120,7 @@
         </tbody>
       </table>
     </div>
+</div>
 
 <footer>
  Page created and maintained by Philipp Sauerteig, last updated: September 2021.
