link to html file

--- a/events.htm
+++ b/events.htm
@@ -10,7 +10,7 @@
 
   <!-- Naviagation-->
   <div class="sidenav">
-    <a href="index.htm">Home</a>
+    <a href="index.html">Home</a>
     <a href="partners.htm">Partners</a>
     <a href="publications.htm">Publications</a>
     <a href="#" style="color:#f1f1f1">Events</a>
