--- a/partners.htm
+++ b/partners.htm
@@ -10,7 +10,7 @@
 
   <!-- Naviagation-->
   <div class="sidenav">
-    <a href="index.htm">Home</a>
+    <a href="index.html">Home</a>
     <a href="#" style="color:#f1f1f1">Partners</a>
     <a href="publications.htm">Publications</a>
     <a href="events.htm">Events</a>
