--- a/events.htm
+++ b/events.htm
@@ -56,7 +56,7 @@
 
             <h4> Upcoming</h4>
               <ul>
-                <li> 2021-10 - Meeting in Homburg to discuss interfaces and data structure</li>
+                <!--<li> 2021-10 - Meeting in Homburg to discuss interfaces and data structure</li>-->
                 <li> 2022-02 - Meeting in Ilmenau
               </ul>
         </td>
