update partners (add Matthias and Giovanni)

--- a/partners.htm
+++ b/partners.htm
@@ -61,8 +61,8 @@
                   <tt style="font-size:10pt">kathrin.flasskampATuni-saarland.de</tt><br>
                   Campus, building A 5 1, room 1.04, 66123 Saarbr&uuml;cken
               </li>
-              <li><a href="https://www.uni-saarland.de/lehrstuhl/flasskamp/team.html">Sonja Bleymehl</a><br>
-                <tt style="font-size:10pt">sonja.bleymehlATuni-saarland.de</tt>
+              <li><a href="https://www.uni-saarland.de/lehrstuhl/flasskamp/team.html">Matthias Hoffmann</a><br>
+                <tt style="font-size:10pt">matthias.hoffmannlATuni-saarland.de</tt>
               </li>
             </ul>
           </td>
@@ -78,6 +78,8 @@
               </li>
               <li>Dr. med. habil. D&ouml;rthe Keiner<br>
                   <tt style="font-size:10pt">doerthe.keinerATuks.eu</tt>
+              </li>
+              <li>Giovanni Miccoli
               </li>
             </ul>
           </td>
