--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <tr valign="top">
         <td><strong>Support:</strong></td>
         <td>
-          <a href="https://www.dfg.de">Deutsche Forschungsgemeinschaft</a>
+          <a href="https://gepris.dfg.de/gepris/projekt/461953135?context=projekt&task=showDetail&id=461953135&">Deutsche Forschungsgemeinschaft</a>
         </td>
       </tr>
 
@@ -114,7 +114,7 @@
 </div>
 
 <footer id="footer">
-  Page created and maintained by Philipp Sauerteig, last updated: September 2021.
+  Page created and maintained by Philipp Sauerteig, last updated: November 2021.
 </footer>
 
 <!--</main>-->
