update email addresses, duration, add link to both DFG and GEPRIS

--- a/events.htm
+++ b/events.htm
@@ -22,7 +22,7 @@
     <table>
       <tbody>
         <tr>
-          <td> <header name="start" align="center"><h2>Actively Deformable Cannulae for Stereotactic Neurosurgery</h2>
+          <td> <header name="start" align="center"><h2>Actively Deformable Cannulas for Stereotactic Neurosurgery</h2>
             <h4>Aktiv kr&uuml;mmbare Kan&uuml;len f&uuml;r die stereotaktische Neurochirurgie</h4></header>
           </td>
           <td><a href="https://www.dfg.de"><img alt="DFG" src="homepage/dfg/dfg_logo_englisch_blau_en.gif" nosave="" border="0" hspace="50vw" style="height:5vw;width:auto;"></a></td> <!--hspace="50vw" width="300vw"-->
