--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <table>
       <tbody>
         <tr>
-          <td> <header name="start" align="center"><h2>Actively Deformable Cannulae for Stereotactic Neurosurgery</h2>
+          <td> <header name="start" align="center"><h2>Actively Deformable Cannulas for Stereotactic Neurosurgery</h2>
             <h4>Aktiv kr&uuml;mmbare Kan&uuml;len f&uuml;r die stereotaktische Neurochirurgie</h4></header>
           </td>
           <td><a href="https://www.dfg.de"><img alt="DFG" src="homepage/dfg/dfg_logo_englisch_blau_en.gif" nosave="" border="0" hspace="50vw" style="height:5vw;width:auto;"></a></td> <!--hspace="50vw" width="300vw"-->
@@ -58,7 +58,7 @@
     <tbody> <!--style="font-size:1.3vw">-->
       <tr valign="top">
         <td><strong>Duration:</strong></td>
-        <td>October 2021 - September 2023</td>
+        <td>July 2021 - June 2023</td>
       </tr>
 
       <td><br> </td>
@@ -66,7 +66,7 @@
       <tr valign="top">
         <td><strong>Support:</strong></td>
         <td>
-          <a href="https://gepris.dfg.de/gepris/projekt/461953135?context=projekt&task=showDetail&id=461953135&">Deutsche Forschungsgemeinschaft</a>
+          <a href="https://www.dfg.de">Deutsche Forschungsgemeinschaft</a> (GEPRIS: Project <a href="https://gepris.dfg.de/gepris/projekt/461953135?context=projekt&task=showDetail&id=461953135&">461953135</a>)
         </td>
       </tr>
 
