--- a/partners.htm
+++ b/partners.htm
@@ -22,7 +22,7 @@
     <table>
       <tbody>
         <tr>
-          <td> <header name="start" align="center"><h2>Actively Deformable Cannulae for Stereotactic Neurosurgery</h2>
+          <td> <header name="start" align="center"><h2>Actively Deformable Cannulas for Stereotactic Neurosurgery</h2>
             <h4>Aktiv kr&uuml;mmbare Kan&uuml;len f&uuml;r die stereotaktische Neurochirurgie</h4></header>
           </td>
           <td><a href="https://www.dfg.de"><img alt="DFG" src="homepage/dfg/dfg_logo_englisch_blau_en.gif" nosave="" border="0" hspace="50vw" style="height:5vw;width:auto;"></a></td> <!--hspace="50vw" width="300vw"-->
@@ -58,11 +58,11 @@
             Modeling and Simulation
             <ul>
               <li><a href="https://www.uni-saarland.de/lehrstuhl/flasskamp.html">Prof. Dr. Kathrin Fla&szlig;kamp</a><br>
-                  <tt style="font-size:10pt">kathrin.flasskampATuni-saarland.de</tt><br>
+                  <tt style="font-size:10pt">kathrin.flasskamp[at]uni-saarland.de</tt><br>
                   Campus, building A 5 1, room 1.04, 66123 Saarbr&uuml;cken
               </li>
               <li><a href="https://www.uni-saarland.de/lehrstuhl/flasskamp/team.html">Matthias Hoffmann</a><br>
-                <tt style="font-size:10pt">matthias.hoffmannlATuni-saarland.de</tt>
+                <tt style="font-size:10pt">matthias.hoffmannl[at]uni-saarland.de</tt>
               </li>
             </ul>
           </td>
@@ -74,10 +74,10 @@
                 Kirrberger Stra&szlig;e, building 90.5, 66421 Homburg-Saar
               </li>
               <li>Prof. Dr. rer. nat. Steffi Urbschat<br>
-                <tt style="font-size:10pt">steffi.urbschatATuks.eu</tt>
+                <tt style="font-size:10pt">steffi.urbschat[at]uks.eu</tt>
               </li>
               <li>Dr. med. habil. D&ouml;rthe Keiner<br>
-                  <tt style="font-size:10pt">doerthe.keinerATuks.eu</tt>
+                  <tt style="font-size:10pt">doerthe.keiner[at]uks.eu</tt>
               </li>
               <li>Giovanni Miccoli
               </li>
@@ -97,11 +97,11 @@
             Mechatronics
             <ul>
               <li><a href="https://www.tu-ilmenau.de/universitaet/fakultaeten/fakultaet-maschinenbau/profil/institute-und-fachgebiete/fachgebiet-mechatronik/team/prof-dr-ing-thomas-sattel">Prof. Dr.-Ing. Thomas Sattel</a><br>
-                  <tt style="font-size:10pt">thomas.sattelATtu-ilmenau.de</tt><br>
+                  <tt style="font-size:10pt">thomas.sattel[at]tu-ilmenau.de</tt><br>
                   Ehrenbergstra&szlig;e 29, 98693 Ilmenau
               </li>
               <li><a href="https://www.tu-ilmenau.de/universitaet/fakultaeten/fakultaet-maschinenbau/profil/institute-und-fachgebiete/fachgebiet-mechatronik/team">Julian M&uuml;hlenhoff</a><br>
-                  <tt style="font-size:10pt">julian.muehlenhoffATtu-ilmenau.de</tt>
+                  <tt style="font-size:10pt">julian.muehlenhoff[at]tu-ilmenau.de</tt>
               </li>
             </ul>
           </td>
@@ -109,12 +109,14 @@
             <h4>Technische Universit&auml;t Ilmenau</h4>
             Optimization-based Control
             <ul>
-              <li><a href="https://www.tu-ilmenau.de/obc/team/karl-worthmann">Univ.-Prof. Dr. Karl Worthmann</a><br>
-                  <tt style="font-size:10pt">karl.worthmannATtu-ilmenau.de</tt><br>
+              <li><a href="https://www.tu-ilmenau.de/obc/team/karl-worthmann">Prof. Dr. Karl Worthmann</a><br>
+                  <tt style="font-size:10pt">karl.worthmann[at]tu-ilmenau.de</tt><br>
                   Weimarer Stra&szlig;e 25, 98693 Ilmenau
               </li>
               <li><a href="https://www.tu-ilmenau.de/obc/team/philipp-sauerteig">Philipp Sauerteig</a><br>
-                  <tt style="font-size:10pt">philipp.sauerteigATtu-ilmenau.de</tt>
+                  <tt style="font-size:10pt">philipp.sauerteig[at]tu-ilmenau.de</tt>
+              </li>
+              <li>Alexander Samuel Bock
               </li>
             </ul>
           </td>
