polish email addresses

--- a/partners.htm
+++ b/partners.htm
@@ -62,7 +62,7 @@
                   Campus, building A 5 1, room 1.04, 66123 Saarbr&uuml;cken
               </li>
               <li><a href="https://www.uni-saarland.de/lehrstuhl/flasskamp/team.html">Matthias Hoffmann</a><br>
-                <tt style="font-size:10pt">matthias.hoffmannl[at]uni-saarland.de</tt>
+                <tt style="font-size:10pt">matthias.hoffmann[at]uni-saarland.de</tt>
               </li>
             </ul>
           </td>
