add grant numbers, figure (nested cannulas), remove EVENTS

--- a/events.htm
+++ b/events.htm
@@ -25,16 +25,26 @@
           <td> <header name="start" align="center"><h2>Actively Deformable Cannulas for Stereotactic Neurosurgery</h2>
             <h4>Aktiv kr&uuml;mmbare Kan&uuml;len f&uuml;r die stereotaktische Neurochirurgie</h4></header>
           </td>
-          <td><a href="https://www.dfg.de"><img alt="DFG" src="homepage/dfg/dfg_logo_englisch_blau_en.gif" nosave="" border="0" hspace="50vw" style="height:5vw;width:auto;"></a></td> <!--hspace="50vw" width="300vw"-->
+          <td><a href="https://www.dfg.de"><img alt="DFG" src="fig/dfg/dfg_logo_englisch_blau_en.gif" nosave="" border="0" hspace="50vw" style="height:5vw;width:auto;"></a></td> <!--hspace="50vw" width="300vw"-->
         </tr>
       </tbody>
     </table>
-    <table>
+    <table style="text-align:center">
       <tbody>
         <tr>
-          <td><a href="https://www.uni-saarland.de/lehrstuhl/flasskamp.html"><img alt="Uni Saarland" src="homepage/logo-uni-saarland.png" nosave="" border="0" hspace="50" style="height:5vw;width:auto;"></a></td> <!--height="75"-->
-          <td><a href="https://www.tu-ilmenau.de/"><img alt="TU Ilmenau" src="homepage/logo-tuil.png" nosave="" border="0" hspace="50" style="height:5vw;width:auto;"></a></td> <!--height="75"-->
-          <td><a href="http://www.uniklinikum-saarland.de/de/einrichtungen/kliniken_institute/neurochirurgie"><img alt="UKS" src="homepage/logo-uks.png" nosave="" border="0" hspace="50" style="height:7vw;width:auto;"></a></td> <!--height="120"-->
+          <td><a href="https://www.uni-saarland.de/lehrstuhl/flasskamp.html"><img alt="Uni Saarland" src="fig/logo-uni-saarland.png" nosave="" border="0" hspace="50" style="height:5vw;width:auto;"></a></td> <!--height="75"-->
+          <td><a href="https://www.tu-ilmenau.de/"><img alt="TU Ilmenau" src="fig/logo-tuil.png" nosave="" border="0" hspace="50" style="height:5vw;width:auto;"></a></td> <!--height="75"-->
+          <td><a href="http://www.uniklinikum-saarland.de/de/einrichtungen/kliniken_institute/neurochirurgie"><img alt="UKS" src="fig/logo-uks.png" nosave="" border="0" hspace="50" style="height:7vw;width:auto;"></a></td> <!--height="120"-->
+        </tr>
+        <tr>
+          <td><b>Modeling and Simulation</b></td>
+          <td><b>Mechatronics</b></td>
+          <td><b>Clinic of Neurosurgery</b></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td><b>Optimization-based Control</b></td>
+          <td></td>
         </tr>
       </tbody>
     </table>
@@ -57,7 +67,7 @@
             <h4> Upcoming</h4>
               <ul>
                 <!--<li> 2021-10 - Meeting in Homburg to discuss interfaces and data structure</li>-->
-                <li> 2022-02 - Meeting in Ilmenau
+                <li> 2022-01 - Meeting at UKS in Homburg
               </ul>
         </td>
         </tr>
@@ -68,7 +78,7 @@
 </div>
 
 <footer>
- Page created and maintained by Philipp Sauerteig, last updated: November 2021.
+ Page created and maintained by Philipp Sauerteig, last updated: December 2021.
 </footer>
 
 </main>
