--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <a href="#" style="color:#f1f1f1">Home</a>
     <a href="partners.htm">Partners</a>
     <a href="publications.htm">Publications</a>
-    <a href="events.htm">Events</a>
+    <!--<a href="events.htm">Events</a>-->
   </div>
 
 <div class="main">
@@ -31,16 +31,26 @@
           <td> <header name="start" align="center"><h2>Actively Deformable Cannulas for Stereotactic Neurosurgery</h2>
             <h4>Aktiv kr&uuml;mmbare Kan&uuml;len f&uuml;r die stereotaktische Neurochirurgie</h4></header>
           </td>
-          <td><a href="https://www.dfg.de"><img alt="DFG" src="homepage/dfg/dfg_logo_englisch_blau_en.gif" nosave="" border="0" hspace="50vw" style="height:5vw;width:auto;"></a></td> <!--hspace="50vw" width="300vw"-->
+          <td><a href="https://www.dfg.de"><img alt="DFG" src="fig/dfg/dfg_logo_englisch_blau_en.gif" nosave="" border="0" hspace="50vw" style="height:5vw;width:auto;"></a></td> <!--hspace="50vw" width="300vw"-->
         </tr>
       </tbody>
     </table>
-    <table>
+    <table style="text-align:center">
       <tbody>
         <tr>
-          <td><a href="https://www.uni-saarland.de/lehrstuhl/flasskamp.html"><img alt="Uni Saarland" src="homepage/logo-uni-saarland.png" nosave="" border="0" hspace="50" style="height:5vw;width:auto;"></a></td> <!--height="75"-->
-          <td><a href="https://www.tu-ilmenau.de/"><img alt="TU Ilmenau" src="homepage/logo-tuil.png" nosave="" border="0" hspace="50" style="height:5vw;width:auto;"></a></td> <!--height="75"-->
-          <td><a href="http://www.uniklinikum-saarland.de/de/einrichtungen/kliniken_institute/neurochirurgie"><img alt="UKS" src="homepage/logo-uks.png" nosave="" border="0" hspace="50" style="height:7vw;width:auto;"></a></td> <!--height="120"-->
+          <td><a href="https://www.uni-saarland.de/lehrstuhl/flasskamp.html"><img alt="Uni Saarland" src="fig/logo-uni-saarland.png" nosave="" border="0" hspace="50" style="height:5vw;width:auto;"></a></td> <!--height="75"-->
+          <td><a href="https://www.tu-ilmenau.de/"><img alt="TU Ilmenau" src="fig/logo-tuil.png" nosave="" border="0" hspace="50" style="height:5vw;width:auto;"></a></td> <!--height="75"-->
+          <td><a href="http://www.uniklinikum-saarland.de/de/einrichtungen/kliniken_institute/neurochirurgie"><img alt="UKS" src="fig/logo-uks.png" nosave="" border="0" hspace="50" style="height:7vw;width:auto;"></a></td> <!--height="120"-->
+        </tr>
+        <tr>
+          <td><b>Modeling and Simulation</b></td>
+          <td><b>Mechatronics</b></td>
+          <td><b>Clinic of Neurosurgery</b></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td><b>Optimization-based Control</b></td>
+          <td></td>
         </tr>
       </tbody>
     </table>
@@ -49,7 +59,7 @@
   <!-- <hr style="height:5px; width:100%; text-align:left; margin-left:0; background-color:blue;"> -->
 
 <div>
-  <table>
+  <table cellpadding="3">
     <colgroup>
        <col span="1" style="width:10vw;">
        <col span="1" style="width:90vw;">
@@ -99,10 +109,14 @@
             To this end, novel sophisticated cannula models for proper representation of phenomena such as path hysteresis are indispensable for trajectory planning and cannula actuation.
             Since precise positioning and path following is of utmost importance, a cannula test bench is to be realized in order to explore cannula behavior and application of cannulas together with the novel trajectory planning approach.<br>
             The combination of a large number of cannula design parameters, the complicated mechanical behavior of the cannula and the multitude of possible trajectories necessitates innovative concepts for trajectory planning.
-            The surgical planning process is formulated as a mathematical optimization problem, in which rather demanding requirements w.r.t. target precision and robustness - encoded in the sensitivity information of the computed solution trajectory - is simultaneously optimized.
+            The surgical planning process is formulated as a mathematical optimization problem, in which rather demanding requirements with respect to target precision and robustness - encoded in the sensitivity information of the computed solution trajectory - is simultaneously optimized.
             Based on the resulting optimal solutions, the medical planning of the surgery can be done.
         </td>
       </tr>
+        <tr>
+          <td> </td>
+          <td style="text-align:center"><img alt="nested cannulas" src="fig/nested_cannulas.pdf" nosave="" border="1" hspace="0" style="height:32vw;width:auto;"></td> <!--height="75"-->
+        </tr>
     </tbody>
   </table>
 </div>
@@ -114,7 +128,7 @@
 </div>
 
 <footer id="footer">
-  Page created and maintained by Philipp Sauerteig, last updated: November 2021.
+  Page created and maintained by Philipp Sauerteig, last updated: December 2021.
 </footer>
 
 <!--</main>-->
