--- a/partners.htm
+++ b/partners.htm
@@ -13,7 +13,7 @@
     <a href="index.html">Home</a>
     <a href="#" style="color:#f1f1f1">Partners</a>
     <a href="publications.htm">Publications</a>
-    <a href="events.htm">Events</a>
+    <!--<a href="events.htm">Events</a>-->
   </div>
 
 <div class="main">
@@ -25,16 +25,26 @@
           <td> <header name="start" align="center"><h2>Actively Deformable Cannulas for Stereotactic Neurosurgery</h2>
             <h4>Aktiv kr&uuml;mmbare Kan&uuml;len f&uuml;r die stereotaktische Neurochirurgie</h4></header>
           </td>
-          <td><a href="https://www.dfg.de"><img alt="DFG" src="homepage/dfg/dfg_logo_englisch_blau_en.gif" nosave="" border="0" hspace="50vw" style="height:5vw;width:auto;"></a></td> <!--hspace="50vw" width="300vw"-->
+          <td><a href="https://www.dfg.de"><img alt="DFG" src="fig/dfg/dfg_logo_englisch_blau_en.gif" nosave="" border="0" hspace="50vw" style="height:5vw;width:auto;"></a></td> <!--hspace="50vw" width="300vw"-->
         </tr>
       </tbody>
     </table>
-    <table>
+    <table style="text-align:center">
       <tbody>
         <tr>
-          <td><a href="https://www.uni-saarland.de/lehrstuhl/flasskamp.html"><img alt="Uni Saarland" src="homepage/logo-uni-saarland.png" nosave="" border="0" hspace="50" style="height:5vw;width:auto;"></a></td> <!--height="75"-->
-          <td><a href="https://www.tu-ilmenau.de/"><img alt="TU Ilmenau" src="homepage/logo-tuil.png" nosave="" border="0" hspace="50" style="height:5vw;width:auto;"></a></td> <!--height="75"-->
-          <td><a href="http://www.uniklinikum-saarland.de/de/einrichtungen/kliniken_institute/neurochirurgie"><img alt="UKS" src="homepage/logo-uks.png" nosave="" border="0" hspace="50" style="height:7vw;width:auto;"></a></td> <!--height="120"-->
+          <td><a href="https://www.uni-saarland.de/lehrstuhl/flasskamp.html"><img alt="Uni Saarland" src="fig/logo-uni-saarland.png" nosave="" border="0" hspace="50" style="height:5vw;width:auto;"></a></td> <!--height="75"-->
+          <td><a href="https://www.tu-ilmenau.de/"><img alt="TU Ilmenau" src="fig/logo-tuil.png" nosave="" border="0" hspace="50" style="height:5vw;width:auto;"></a></td> <!--height="75"-->
+          <td><a href="http://www.uniklinikum-saarland.de/de/einrichtungen/kliniken_institute/neurochirurgie"><img alt="UKS" src="fig/logo-uks.png" nosave="" border="0" hspace="50" style="height:7vw;width:auto;"></a></td> <!--height="120"-->
+        </tr>
+        <tr>
+          <td><b>Modeling and Simulation</b></td>
+          <td><b>Mechatronics</b></td>
+          <td><b>Clinic of Neurosurgery</b></td>
+        </tr>
+        <tr>
+          <td></td>
+          <td><b>Optimization-based Control</b></td>
+          <td></td>
         </tr>
       </tbody>
     </table>
@@ -54,8 +64,8 @@
         -->
         <tr valign="top">
           <td>
-            <h4>Universit&auml;t des Saarlandes</h4>
-            Modeling and Simulation
+            <!--<h4>Universit&auml;t des Saarlandes</h4>-->
+            <h4>Modeling and Simulation (grant FL 989/5-1)</h4>
             <ul>
               <li><a href="https://www.uni-saarland.de/lehrstuhl/flasskamp.html">Prof. Dr. Kathrin Fla&szlig;kamp</a><br>
                   <tt style="font-size:10pt">kathrin.flasskamp[at]uni-saarland.de</tt><br>
@@ -67,8 +77,8 @@
             </ul>
           </td>
           <td>
-            <h4>Universit&auml;tsklinikum des Saarlandes</h4>
-            Clinic of Neurosurgery
+            <!--<h4>Universit&auml;tsklinikum des Saarlandes</h4>-->
+            <h4>Clinic of Neurosurgery (grant OE 253/7-1)</h4>
             <ul>
               <li><a href="http://www.uniklinikum-saarland.de/de/einrichtungen/kliniken_institute/neurochirurgie">Prof. Dr. med. Joachim Oertel</a><br>
                 Kirrberger Stra&szlig;e, building 90.5, 66421 Homburg-Saar
@@ -93,8 +103,8 @@
         -->
         <tr valign="top">
           <td>
-            <h4>Technische Universit&auml;t Ilmenau</h4>
-            Mechatronics
+            <!--<h4>Technische Universit&auml;t Ilmenau</h4>-->
+            <h4>Mechatronics (grant SA 773/10-1)</h4>
             <ul>
               <li><a href="https://www.tu-ilmenau.de/universitaet/fakultaeten/fakultaet-maschinenbau/profil/institute-und-fachgebiete/fachgebiet-mechatronik/team/prof-dr-ing-thomas-sattel">Prof. Dr.-Ing. Thomas Sattel</a><br>
                   <tt style="font-size:10pt">thomas.sattel[at]tu-ilmenau.de</tt><br>
@@ -106,8 +116,8 @@
             </ul>
           </td>
           <td>
-            <h4>Technische Universit&auml;t Ilmenau</h4>
-            Optimization-based Control
+            <!--<h4>Technische Universit&auml;t Ilmenau</h4>-->
+            <h4>Optimization-based Control (grant WO 2056/11-1)</h4>
             <ul>
               <li><a href="https://www.tu-ilmenau.de/obc/team/karl-worthmann">Prof. Dr. Karl Worthmann</a><br>
                   <tt style="font-size:10pt">karl.worthmann[at]tu-ilmenau.de</tt><br>
@@ -127,7 +137,7 @@
 </div>
 
 <footer>
- Page created and maintained by Philipp Sauerteig, last updated: November 2021.
+ Page created and maintained by Philipp Sauerteig, last updated: December 2021.
 </footer>
 
 </main>
