adjust responsive font sizes

--- a/partners.htm
+++ b/partners.htm
@@ -68,11 +68,11 @@
             <h4>Modeling and Simulation (grant FL 989/5-1)</h4>
             <ul>
               <li><a href="https://www.uni-saarland.de/lehrstuhl/flasskamp.html">Prof. Dr. Kathrin Fla&szlig;kamp</a><br>
-                  <tt style="font-size:10pt">kathrin.flasskamp[at]uni-saarland.de</tt><br>
+                  <tt style="font-size:0.8vw">kathrin.flasskamp[at]uni-saarland.de</tt><br>
                   Campus, building A 5 1, room 1.04, 66123 Saarbr&uuml;cken
               </li>
               <li><a href="https://www.uni-saarland.de/lehrstuhl/flasskamp/team.html">Matthias Hoffmann</a><br>
-                <tt style="font-size:10pt">matthias.hoffmann[at]uni-saarland.de</tt>
+                <tt style="font-size:0.8vw">matthias.hoffmann[at]uni-saarland.de</tt>
               </li>
             </ul>
           </td>
@@ -84,10 +84,10 @@
                 Kirrberger Stra&szlig;e, building 90.5, 66421 Homburg-Saar
               </li>
               <li>Prof. Dr. rer. nat. Steffi Urbschat<br>
-                <tt style="font-size:10pt">steffi.urbschat[at]uks.eu</tt>
+                <tt style="font-size:0.8vw">steffi.urbschat[at]uks.eu</tt>
               </li>
               <li>Dr. med. habil. D&ouml;rthe Keiner<br>
-                  <tt style="font-size:10pt">doerthe.keiner[at]uks.eu</tt>
+                  <tt style="font-size:0.8vw">doerthe.keiner[at]uks.eu</tt>
               </li>
               <li>Giovanni Miccoli
               </li>
@@ -107,11 +107,11 @@
             <h4>Mechatronics (grant SA 773/10-1)</h4>
             <ul>
               <li><a href="https://www.tu-ilmenau.de/universitaet/fakultaeten/fakultaet-maschinenbau/profil/institute-und-fachgebiete/fachgebiet-mechatronik/team/prof-dr-ing-thomas-sattel">Prof. Dr.-Ing. Thomas Sattel</a><br>
-                  <tt style="font-size:10pt">thomas.sattel[at]tu-ilmenau.de</tt><br>
+                  <tt style="font-size:0.8vw">thomas.sattel[at]tu-ilmenau.de</tt><br>
                   Ehrenbergstra&szlig;e 29, 98693 Ilmenau
               </li>
               <li><a href="https://www.tu-ilmenau.de/universitaet/fakultaeten/fakultaet-maschinenbau/profil/institute-und-fachgebiete/fachgebiet-mechatronik/team">Julian M&uuml;hlenhoff</a><br>
-                  <tt style="font-size:10pt">julian.muehlenhoff[at]tu-ilmenau.de</tt>
+                  <tt style="font-size:0.8vw">julian.muehlenhoff[at]tu-ilmenau.de</tt>
               </li>
             </ul>
           </td>
@@ -120,11 +120,11 @@
             <h4>Optimization-based Control (grant WO 2056/11-1)</h4>
             <ul>
               <li><a href="https://www.tu-ilmenau.de/obc/team/karl-worthmann">Prof. Dr. Karl Worthmann</a><br>
-                  <tt style="font-size:10pt">karl.worthmann[at]tu-ilmenau.de</tt><br>
+                  <tt style="font-size:0.8vw">karl.worthmann[at]tu-ilmenau.de</tt><br>
                   Weimarer Stra&szlig;e 25, 98693 Ilmenau
               </li>
               <li><a href="https://www.tu-ilmenau.de/obc/team/philipp-sauerteig">Philipp Sauerteig</a><br>
-                  <tt style="font-size:10pt">philipp.sauerteig[at]tu-ilmenau.de</tt>
+                  <tt style="font-size:0.8vw">philipp.sauerteig[at]tu-ilmenau.de</tt>
               </li>
               <li>Alexander Samuel Bock
               </li>
