add MATHMOD conference paper to publication list

--- a/publications.htm
+++ b/publications.htm
@@ -76,6 +76,10 @@
           <td>
             <h4>Conference papers</h4>
             <ul>
+	      <li>P. Sauerteig, M. K. Hoffmann, J. M&uuml;hlenhoff, G. Miccoli, D. Keiner, S. Urbschat, J. Oertel, T. Sattel, K. Fla&szlig;kamp, K. Worthmann<br>
+		   <b>Optimal Path Planning for Stereotactic Neurosurgery based on an Elastostatic Cannula Model</b><br>
+		   Submitted.
+	      </li>
               <li>K. Fla&szlig;kamp, K. Worthmann, C. Greiner-Petter, C. B&uuml;skens, T. Sattel<br>
                   <b>An Optimal Control Problem for Stereotactic Neurosurgery</b><br>
                   <i>Mathmod Extended Abstract Volume</i>, Bd. 55, 67-68 (2018)
