--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <a href="#" style="color:#f1f1f1">Home</a>
     <a href="partners.htm">Partners</a>
     <a href="publications.htm">Publications</a>
-    <!--<a href="events.htm">Events</a>-->
+    <a href="events.htm">Events</a>
   </div>
 
 <div class="main">
@@ -59,7 +59,7 @@
 
   <!-- <hr style="height:5px; width:100%; text-align:left; margin-left:0; background-color:blue;"> -->
 
-<div>
+<div> <!-- id="content">-->
   <table cellpadding="3">
     <colgroup>
        <col span="1" style="width:10vw;">
@@ -114,10 +114,12 @@
             Based on the resulting optimal solutions, the medical planning of the surgery can be done.
         </td>
       </tr>
+      <!--
         <tr>
           <td> </td>
-          <td style="text-align:center"><img alt="nested cannulas" src="fig/nested_cannulas.pdf" nosave="" border="1" hspace="0" style="height:32vw;width:auto;"></td> <!--height="75"-->
+          <td style="text-align:center"><img alt="nested cannulas" src="fig/tube_robot.pdf" nosave="" border="0" hspace="0" style="height:25vw;width:auto;"></td>
         </tr>
+      -->
     </tbody>
   </table>
 </div>
@@ -129,7 +131,7 @@
 </div>
 
 <footer id="footer">
-  Page created and maintained by Philipp Sauerteig, last updated: December 2021.
+  Page created and maintained by Philipp Sauerteig, last updated: February 2022.
 </footer>
 
 <!--</main>-->
