--- a/partners.htm
+++ b/partners.htm
@@ -13,7 +13,7 @@
     <a href="index.html">Home</a>
     <a href="#" style="color:#f1f1f1">Partners</a>
     <a href="publications.htm">Publications</a>
-    <!--<a href="events.htm">Events</a>-->
+    <a href="events.htm">Events</a>
   </div>
 
 <div class="main">
@@ -137,7 +137,7 @@
 </div>
 
 <footer>
- Page created and maintained by Philipp Sauerteig, last updated: December 2021.
+ Page created and maintained by Philipp Sauerteig, last updated: February 2022.
 </footer>
 
 </main>
