--- a/events.htm
+++ b/events.htm
@@ -56,20 +56,35 @@
       <tbody>
 
         <!-- Meetings -->
-        <tr><td class="bg"><a name="meetup"><h4>Project meetings</h4></a></td> </tr>
+        <tr><td class="bg"><a name="meetup"><h3>Project meetings</h3></a></td> </tr>
         <tr><td>The partners have regular project meetings with alternating hosts as well as more frequent online meetings.
 
-            <h4> Meetings</h4>
+            <h4>Past Meetings</h4>
               <ul>
-                <li> 2021-07-26/27 - Kick-off meeting at Universit&auml;tsklinikum des Saarlandes, Homburg [all partners]</li>
+                <li> 2021/07/26-27 - Kick-off meeting at Universit&auml;tsklinikum des Saarlandes (UKS), Homburg [all partners]</li>
+                <li> 2022/01/06-07 - Meeting at UKS in Homburg [all partners]</li>
+                <li> 2022/02/02 - (Virtual) Meeting [all partners]</li>
               </ul>
 
-            <h4> Upcoming</h4>
+            <h4> Upcoming Meetings</h4>
               <ul>
-                <!--<li> 2021-10 - Meeting in Homburg to discuss interfaces and data structure</li>-->
-                <li> 2022-01 - Meeting at UKS in Homburg
+                <li> 2022/03 - Meeting at UKS in Homburg [first clinical trials using brain cadavers]</li>
               </ul>
-        </td>
+            </td>
+        </tr>
+
+        <!-- Talks etc. -->
+        <tr><td><h3>Presentations</h3></td></tr>
+        <tr><td>Results achieved within the project are presented by the partners to a broad audiance at suited conferences on a regular basis.
+
+            <h4>Conference Talks (upcoming)</h4>
+              <ul>
+                <li> 2022/09/27-29 - P. Sauerteig<br>
+                  <b>Optimization-Based Path Planning in Stereotactic Neurosurgery using an Elastostatic Cannula Model</b><br>
+                  <i>MATHMOD 2022</i> in Vienna
+                </li>
+              </ul>
+            </td>
         </tr>
 
         </tbody>
@@ -78,7 +93,7 @@
 </div>
 
 <footer>
- Page created and maintained by Philipp Sauerteig, last updated: December 2021.
+ Page created and maintained by Philipp Sauerteig, last updated: February 2022.
 </footer>
 
 </main>
