update upcoming meetings based on protocol of virtual meeting on 2 Feb

--- a/events.htm
+++ b/events.htm
@@ -68,6 +68,7 @@
 
             <h4> Upcoming Meetings</h4>
               <ul>
+                <li> 2020/03/11 - Meeting at TU Ilmenau [all partners]</li>
                 <li> 2022/03 - Meeting at UKS in Homburg [first clinical trials using brain cadavers]</li>
               </ul>
             </td>
