--- a/events.htm
+++ b/events.htm
@@ -68,15 +68,15 @@
 
             <h4> Upcoming Meetings</h4>
               <ul>
-                <li> 2020/03/11 - Meeting at TU Ilmenau [all partners]</li>
-                <li> 2022/03 - Meeting at UKS in Homburg [first clinical trials using brain cadavers]</li>
+                <li> 2020/03/10-11 - Meeting at UKS Homburg to discuss the experimental setting for clinical trials involving brain cadavers</li>
+                <!--<li> 2022/03 - Meeting at UKS in Homburg [first clinical trials using brain cadavers]</li>-->
               </ul>
             </td>
         </tr>
 
         <!-- Talks etc. -->
         <tr><td><h3>Presentations</h3></td></tr>
-        <tr><td>Results achieved within the project are presented by the partners to a broad audiance at suited conferences on a regular basis.
+        <tr><td>Results achieved within the project are presented by the partners to a broad audiance at selected conferences.
 
             <h4>Conference Talks (upcoming)</h4>
               <ul>
@@ -94,7 +94,7 @@
 </div>
 
 <footer>
- Page created and maintained by Philipp Sauerteig, last updated: February 2022.
+ Page created and maintained by Philipp Sauerteig, last updated: March 2022.
 </footer>
 
 </main>
