--- a/events.htm
+++ b/events.htm
@@ -64,12 +64,13 @@
                 <li> 2021/07/26-27 - Kick-off meeting at Universit&auml;tsklinikum des Saarlandes (UKS), Homburg [all partners]</li>
                 <li> 2022/01/06-07 - Meeting at UKS in Homburg [all partners]</li>
                 <li> 2022/02/02 - (Virtual) Meeting [all partners]</li>
+                  <li> 2020/03/10-11 - Meeting at UKS Homburg to discuss the experimental setting for clinical trials</li>
               </ul>
 
             <h4> Upcoming Meetings</h4>
               <ul>
-                <li> 2020/03/10-11 - Meeting at UKS Homburg to discuss the experimental setting for clinical trials involving brain cadavers</li>
-                <!--<li> 2022/03 - Meeting at UKS in Homburg [first clinical trials using brain cadavers]</li>-->
+                <li> 2020/03/30 - Meeting at UKS Homburg to discuss the experimental setting for clinical trials</li>
+                <li> 2020/05/16-20 - experimental setup at TU Ilmenau to evaluate precision of model and robot</li>
               </ul>
             </td>
         </tr>
