--- a/events.htm
+++ b/events.htm
@@ -64,13 +64,14 @@
                 <li> 2021/07/26-27 - Kick-off meeting at Universit&auml;tsklinikum des Saarlandes (UKS), Homburg [all partners]</li>
                 <li> 2022/01/06-07 - Meeting at UKS in Homburg [all partners]</li>
                 <li> 2022/02/02 - (Virtual) Meeting [all partners]</li>
-                  <li> 2020/03/10-11 - Meeting at UKS Homburg to discuss the experimental setting for clinical trials</li>
+                <li> 2022/03/10-11 - Meeting at UKS Homburg to discuss the experimental setting for clinical trials</li>
+                <li> 2022/03/30 - Meeting at UKS Homburg to discuss the experimental setting for clinical trials</li>
               </ul>
 
             <h4> Upcoming Meetings</h4>
               <ul>
-                <li> 2020/03/30 - Meeting at UKS Homburg to discuss the experimental setting for clinical trials</li>
-                <li> 2020/05/16-20 - experimental setup at TU Ilmenau to evaluate precision of model and robot</li>
+                <li> 2022/04/13 - First clinical trials on pig's brain at UKS Homburg</li>
+                <li> 2022/05/16-20 - Experimental setup at TU Ilmenau to evaluate precision of model and robot</li>
               </ul>
             </td>
         </tr>
@@ -83,7 +84,7 @@
               <ul>
                 <li> 2022/09/27-29 - P. Sauerteig<br>
                   <b>Optimization-Based Path Planning in Stereotactic Neurosurgery using an Elastostatic Cannula Model</b><br>
-                  <i>MATHMOD 2022</i> in Vienna
+                  <i>MATHMOD 2022</i> in Vienna, Austria
                 </li>
               </ul>
             </td>
