--- a/publications.htm
+++ b/publications.htm
@@ -78,7 +78,7 @@
             <ul>
 	      <li>P. Sauerteig, M. K. Hoffmann, J. M&uuml;hlenhoff, G. Miccoli, D. Keiner, S. Urbschat, J. Oertel, T. Sattel, K. Fla&szlig;kamp, K. Worthmann<br>
 		   <b>Optimal Path Planning for Stereotactic Neurosurgery based on an Elastostatic Cannula Model</b><br>
-		   Submitted.
+		   Accepted for publication and presentation at the MATHMOD 2022 in Vienna, Austria.
 	      </li>
               <li>K. Fla&szlig;kamp, K. Worthmann, C. Greiner-Petter, C. B&uuml;skens, T. Sattel<br>
                   <b>An Optimal Control Problem for Stereotactic Neurosurgery</b><br>
@@ -106,7 +106,7 @@
 </div>
 
 <footer>
- Page created and maintained by Philipp Sauerteig, last updated: March 2022.
+ Page created and maintained by Philipp Sauerteig, last updated: April 2022.
 </footer>
 
 </main>
