add ACTUATOR paper and talk

--- a/events.htm
+++ b/events.htm
@@ -66,11 +66,11 @@
                 <li> 2022/02/02 - (Virtual) Meeting [all partners]</li>
                 <li> 2022/03/10-11 - Meeting at UKS Homburg to discuss the experimental setting for clinical trials</li>
                 <li> 2022/03/30 - Meeting at UKS Homburg to discuss the experimental setting for clinical trials</li>
+                <li> 2022/04/13 - First clinical trials on pig's brain at UKS Homburg</li>
               </ul>
 
             <h4> Upcoming Meetings</h4>
               <ul>
-                <li> 2022/04/13 - First clinical trials on pig's brain at UKS Homburg</li>
                 <li> 2022/05/16-20 - Experimental setup at TU Ilmenau to evaluate precision of model and robot</li>
               </ul>
             </td>
@@ -82,10 +82,13 @@
 
             <h4>Conference Talks (upcoming)</h4>
               <ul>
-                <li> 2022/09/27-29 - P. Sauerteig<br>
+                <li>2022/09/27-29 - P. Sauerteig<br>
                   <b>Optimization-Based Path Planning in Stereotactic Neurosurgery using an Elastostatic Cannula Model</b><br>
                   <i>MATHMOD 2022</i> in Vienna, Austria
                 </li>
+                <li>2022/06/29-30 - J. M&uuml;hlenhoff<br>
+                  <b>A manually actuated continuum robot research platform for deployable shape-memory curved cannulae in stereotactic neurosurgery</b><br>
+                  <i>ACTUATOR 2022</i> in Mannheim, Germany
               </ul>
             </td>
         </tr>
@@ -96,7 +99,7 @@
 </div>
 
 <footer>
- Page created and maintained by Philipp Sauerteig, last updated: April 2022.
+ Page created and maintained by Philipp Sauerteig, last updated: May 2022.
 </footer>
 
 </main>
