--- a/publications.htm
+++ b/publications.htm
@@ -76,10 +76,14 @@
           <td>
             <h4>Conference papers</h4>
             <ul>
-	      <li>P. Sauerteig, M. K. Hoffmann, J. M&uuml;hlenhoff, G. Miccoli, D. Keiner, S. Urbschat, J. Oertel, T. Sattel, K. Fla&szlig;kamp, K. Worthmann<br>
-		   <b>Optimal Path Planning for Stereotactic Neurosurgery based on an Elastostatic Cannula Model</b><br>
-		   Accepted for publication and presentation at the MATHMOD 2022 in Vienna, Austria.
-	      </li>
+              <li>J. M&uuml;hlenhoff, T. K&ouml;rbner, G. Miccoli, D. Keiner, M. K. Hoffmann, P. Sauerteig, K. Worthmann, K. Fla&szlig;kamp, S. Urbschat, J. Oertel and T. Sattel<br>
+                <b>A manually actuated continuum robot research platform for deployable shape-memory curved cannulae in stereotactic neurosurgery</b><br>
+                  Accepted for publication and presentation at the <i>International Conference and Exhibition on New Actuator Systems and Applications (ACTUATOR) 2022</i> in Mannheim, Germany.
+              </li>
+	            <li>P. Sauerteig, M. K. Hoffmann, J. M&uuml;hlenhoff, G. Miccoli, D. Keiner, S. Urbschat, J. Oertel, T. Sattel, K. Fla&szlig;kamp, K. Worthmann<br>
+		              <b>Optimal Path Planning for Stereotactic Neurosurgery based on an Elastostatic Cannula Model</b><br>
+		                Accepted for publication and presentation at the <i>10th Vienna International Conference on Mathematical Modeling (MATHMOD) 2022</i> in Vienna, Austria.
+	            </li>
               <li>K. Fla&szlig;kamp, K. Worthmann, C. Greiner-Petter, C. B&uuml;skens, T. Sattel<br>
                   <b>An Optimal Control Problem for Stereotactic Neurosurgery</b><br>
                   <i>Mathmod Extended Abstract Volume</i>, Bd. 55, 67-68 (2018)
@@ -106,7 +110,7 @@
 </div>
 
 <footer>
- Page created and maintained by Philipp Sauerteig, last updated: April 2022.
+ Page created and maintained by Philipp Sauerteig, last updated: May 2022.
 </footer>
 
 </main>
