update list of meetings

--- a/events.htm
+++ b/events.htm
@@ -67,11 +67,12 @@
                 <li> 2022/03/10-11 - Meeting at UKS Homburg to discuss the experimental setting for clinical trials</li>
                 <li> 2022/03/30 - Meeting at UKS Homburg to discuss the experimental setting for clinical trials</li>
                 <li> 2022/04/13 - First clinical trials on pig's brain at UKS Homburg</li>
+                <li> 2022/05/16-20 - Experimental setup at TU Ilmenau to evaluate precision of model and robot via photogrammetry system</li>
               </ul>
 
             <h4> Upcoming Meetings</h4>
               <ul>
-                <li> 2022/05/16-20 - Experimental setup at TU Ilmenau to evaluate precision of model and robot</li>
+                <li> 2022/05/23-24 - PI meeting at UKS Homburg</li>
               </ul>
             </td>
         </tr>
